fix spacing and capitalization

--- a/bookdown/style.css
+++ b/bookdown/style.css
@@ -12,3 +12,8 @@ body {
   font-size: 14px;
   line-height: 1.5;
 }
+
+div.csl-entry {
+  clear: both;
+  margin-bottom: 10px;
+}
